<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/pref_category_alarm">

        <PreferenceScreen
            android:key="@string/pref_alarm_test_key"
            android:title="@string/pref_alarm_test_title"
            android:summary="@string/pref_alarm_test_summary" >
            <intent android:action="com.hammerox.android.ALARM_SCREEN" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:key="@string/pref_alarm_vibrate_key"
            android:title="@string/pref_alarm_vibrate_title"
            android:summary="@string/pref_alarm_vibrate_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="@string/pref_alarm_type_key"
            android:title="@string/pref_alarm_type_title"
            android:summary="@string/pref_alarm_type_summary"
            android:entries="@array/alarm_type"
            android:entryValues="@array/alarm_type_values"
            android:defaultValue="2" />

        <RingtonePreference
            android:key="@string/pref_alarm_sound_key"
            android:title="@string/pref_alarm_sound_title"
            android:ringtoneType="alarm"
            android:summary="@string/pref_alarm_sound_summary"
            android:showDefault="true" />

        <EditTextPreference
            android:key="@string/pref_alarm_speech_key"
            android:title="@string/pref_alarm_speech_title"
            android:summary="@string/pref_alarm_speech_summary"
            android:dialogTitle="EditText Dialog"
            android:defaultValue="@string/pref_alarm_speech_default"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_others">

        <CheckBoxPreference
            android:key="@string/pref_boot_key"
            android:title="@string/pref_boot_title"
            android:summary="@string/pref_boot_summary"
            android:defaultValue="true" />

        <PreferenceScreen
            android:key="@string/pref_historic_key"
            android:title="@string/pref_historic_title"
            android:summary="@string/pref_historic_summary" >
            <intent android:action="com.hammerox.android.HISTORIC" />
        </PreferenceScreen>
    </PreferenceCategory>


</PreferenceScreen>