<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/primary_light"
    tools:context=".fragments.DetectorFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2">

        <com.skyfishjy.library.RippleBackground
            android:id="@+id/detector_ripple"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            app:rb_color="@color/accent"
            app:rb_radius="50dp"
            app:rb_rippleAmount="4"
            app:rb_duration="2000"
            app:rb_scale="2">
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/detector_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:fb_iconResource="@drawable/ic_notifications_black_48dp"
                app:fb_radius="50dp"
                app:fb_defaultColor="@color/accent"
                app:fb_focusColor="@color/accent_dark"
                android:layout_centerInParent="true"/>
        </com.skyfishjy.library.RippleBackground>

        <TextView
            android:text="@string/detector_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/detector_instructions_1"
            android:text="@string/detector_instructions_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:text="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/detector_instructions_2"
            android:text="@string/detector_instructions_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:text="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            style="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/detector_instructions_3"
            android:text="@string/detector_instructions_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </GridLayout>
</FrameLayout>
